# mandelbrot

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mandelbrot.cpp  mandelbrot.cu  mandelbrot.h  mandelbrot_gpu.h
